fixes spacing

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -50,6 +50,9 @@ $breakpoint-lg: 717px;
     width: 100%;
     height: 400px;
     margin-top: -10px;
+    @include x-small {
+      margin-bottom: 50px;
+    }
   }
 
   & .grow-logo {
